--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <title>Calculated</title>
-    <script src="script.js"></script>
+
 </head>
 
 <body>
     <div class = "bar">
         <div class = "calc-background">
             <div class="calc-topbar">
-                <div id="result">80085</div>
+                <div id="result">0</div>
             </div>
             <div class = "calc-middle">
                 <div class = "calc-button white"><button id="ac">AC</button></div>
@@ -34,7 +34,7 @@
                 <div class = "calc-button orange"><button id="plus">+</button></div>
             </div>
             <div class="calc-bottom">
-                <div class = "calc-button zero"><button id="0">0</button></div>
+                <div class = "calc-button zero"><button id="zero">0</button></div>
                 <div class = "calc-button"><button id="point">.</button></div>
                 <div class = "calc-button orange equals"><button id="equals">=</button></div>
             </div>
@@ -49,6 +49,6 @@
               </label>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
