update dark mode

--- a/index.html
+++ b/index.html
@@ -44,34 +44,12 @@
         <div class="toggle-text">Dark Mode</div>
         <div class = "toggle">
             <label class="switch">
-                <input type="checkbox" onchange="themeToggle()" id="slider">
+                <input type="checkbox" onchange="themeToggle()" id="slider" checked>
                     <span class="slider round"></span>
               </label>
         </div>
     </div>
     <script src="script.js"></script>
-    <script>
-        // function to set a given theme/color-scheme
-        function setTheme(themeName) {
-            localStorage.setItem('theme', themeName);
-            document.documentElement.className = themeName;
-        }
-        // function to toggle between light and dark theme
-        function themeToggle() {
-            if (localStorage.getItem('theme') === 'theme-dark'){
-                setTheme('theme-light');
-            } else {
-                setTheme('theme-dark');
-            }
-        }
-        // Immediately invoked function to set the theme on initial load
-        (function () {
-            if (localStorage.getItem('theme') === 'theme-dark') {
-                setTheme('theme-dark');
-            } else {
-                setTheme('theme-light');
-            }
-        })();
-    </script>
+ 
 </body>
 </html>
